allows for GET on manifest collection or specific manifest by ID
