# src/esm/models/manifest.py
@@ -12,7 +12,7 @@ class Manifest(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, id: str=None, plan_id: str=None, service_id: str=None, manifest_type: str=None, manifest_content: str=None):
+    def __init__(self, id: str=None, plan_id: str=None, service_id: str=None, manifest_type: str=None, manifest_content: str=None, endpoints: object=None):
         """
         Manifest - a model defined in Swagger
 
@@ -26,13 +26,16 @@ class Manifest(Model):
         :type manifest_type: str
         :param manifest_content: The manifest_content of this Manifest.
         :type manifest_content: str
+        :param endpoints: The endpoints of this Manifest.
+        :type endpoints: object
         """
         self.swagger_types = {
             'id': str,
             'plan_id': str,
             'service_id': str,
             'manifest_type': str,
-            'manifest_content': str
+            'manifest_content': str,
+            'endpoints': object
         }
 
         self.attribute_map = {
@@ -40,7 +43,8 @@ class Manifest(Model):
             'plan_id': 'plan_id',
             'service_id': 'service_id',
             'manifest_type': 'manifest_type',
-            'manifest_content': 'manifest_content'
+            'manifest_content': 'manifest_content',
+            'endpoints': 'endpoints'
         }
 
         self._id = id
@@ -48,6 +52,7 @@ class Manifest(Model):
         self._service_id = service_id
         self._manifest_type = manifest_type
         self._manifest_content = manifest_content
+        self._endpoints = endpoints
 
     @classmethod
     def from_dict(cls, dikt) -> 'Manifest':
@@ -185,4 +190,27 @@ class Manifest(Model):
             raise ValueError("Invalid value for `manifest_content`, must not be `None`")
 
         self._manifest_content = manifest_content
+
+    @property
+    def endpoints(self) -> object:
+        """
+        Gets the endpoints of this Manifest.
+        A set of endpoints that the service instance exposes. This includes APIs and UIs.
+
+        :return: The endpoints of this Manifest.
+        :rtype: object
+        """
+        return self._endpoints
+
+    @endpoints.setter
+    def endpoints(self, endpoints: object):
+        """
+        Sets the endpoints of this Manifest.
+        A set of endpoints that the service instance exposes. This includes APIs and UIs.
+
+        :param endpoints: The endpoints of this Manifest.
+        :type endpoints: object
+        """
+
+        self._endpoints = endpoints
 
